// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EmptyResults component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="no-results dark:text-white text-center mt-10"
  >
    <h2
      class="text-2xl"
    >
      No Results Found
    </h2>
    <p>
      Try adjusting your search or filter to find what you're looking for.
    </p>
  </div>
</DocumentFragment>
`;

exports[`EmptyResults component renders heading and message 1`] = `
<div>
  <div
    class="no-results dark:text-white text-center mt-10"
  >
    <h2
      class="text-2xl"
    >
      No Results Found
    </h2>
    <p>
      Try adjusting your search or filter to find what you're looking for.
    </p>
  </div>
</div>
`;
